--- a/prevencion.html
+++ b/prevencion.html
@@ -44,7 +44,7 @@
                     <div class="card" style="width: 40rem;">
                         <img src="imagenes/3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h3>Prevencion de la agua contaminada </h3>
+                                <h3>contaminacion</h3>
                                 <p>
                                     Para prevenir la contaminacion del agua puedes imprementar estos tips:
                                     
@@ -66,6 +66,8 @@
             </div>
         </div>
     </section>
+
+
 
 
 
